firmware/installPybricksDialog: fix some layout issues

--- a/src/firmware/installPybricksDialog/installPybricksDialog.scss
+++ b/src/firmware/installPybricksDialog/installPybricksDialog.scss
@@ -1,22 +1,28 @@
 // SPDX-License-Identifier: MIT
 // Copyright (c) 2022 The Pybricks Authors
 
+@use '@blueprintjs/core/lib/scss/variables' as bp;
+
 .pb-firmware-installPybricksDialog {
     &-body {
-        min-height: 250px;
+        min-height: bp.$pt-grid-size * 25;
     }
 
     &-license {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: bp.$pt-grid-size;
         min-height: inherit;
 
         &-text {
             flex-grow: 1;
             min-height: 0;
-            max-height: 200px;
+            max-height: bp.$pt-grid-size * 20;
             overflow: auto;
+
+            & .#{bp.$ns}-non-ideal-state {
+                min-height: bp.$pt-grid-size * 20;
+            }
         }
     }
 }
